@@ -29,7 +29,7 @@
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
  * THE POSSIBILITY OF SUCH DAMAGE.
  *
- * $Id: extern.h,v 1.1 2005/02/21 10:38:06 imilh Exp $ 
+ * $Id: extern.h,v 1.2 2005/02/22 09:52:37 imilh Exp $ 
  */
 
 #ifndef _EXTERN_H_
